[tool.poetry]
name = "sgui"
version = "0.1.0"
description = ""
authors = ["Thalla <Temerita16@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9.7,<4.0"
pyopenssl = "^23.2.0"
standard-workflows = {path = "./Workflows/standard-workflows", develop = true}
streamlit = "^1.22.0"
watchdog = "^3.0.0"
st-pages = "^0.4.1"
streamlit-elements = "^0.1.0"
pandas = "^2.0.1"
streamlit-extras = "^0.2.7"
pdf2image = "^1.16.3"
openpyxl = "^3.1.2"
kaleido = "0.2.1"
mousipy = "^0.1.3"
adjusttext = "^0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
