[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'funki'
dynamic = ['version']
description = ''
authors = [
    {
        name = 'Nicolàs Palacio-Escat',
        email = 'nicolas.palacio-escat@uni-heidelberg.de'
    },
]
license = { file = 'LICENSE' }
readme = 'README.md'
requires-python = '>=3.7'
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: GPL-3.0 License',
    'Operating System :: OS Independent',
]
dependencies = [
    'numpy',
    'pandas',
    'anndata',
    'loompy',
    'scanpy',
    'leidenalg',
    'louvain',
    'harmonypy',
    'decoupler',
    'dash'
]

[project.urls]
Homepage = 'https://github.com/saezlab/funki'
Issues = 'https://github.com/saezlab/funki/issues'

[tool.setuptools.dynamic]
version = { attr = 'funki.__version__' }
