[tool.poetry]
name = "proj"
version = "0.1.0"
description = ""
authors = ["Name <name@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
jupyter = "^1.0.0"
ipykernel = "^6.22.0"
pyyaml = "^6.0"
standard-workflows = {path = "../../../../Workflows/standard-workflows", develop = true} 
cpython = "^0.0.6"
pydeseq2 = "^0.3.3"
adjusttext = "^0.8"
openpyxl = "^3.1.2"
omnipath = {git = "https://github.com/saezlab/omnipath.git"}
numba = "^0.57.1"
pypath-omnipath = {git = "https://github.com/saezlab/pypath-omnipath.git"}
pypath = "^0.1"
mousipy = "^0.1.3"
jupyter-contrib-nbextensions = "^0.7.0"
jupyter-pip = "^0.3.1"
scikit-misc = "^0.3.0"
seaborn = "0.12.2"
pycomplexheatmap = "^1.6.2"
marsilea = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
